# rust-prisma

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
prisma/: schema.prisma
src/: main.rs  prisma.rs
